Details
- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
Major
 
- 
        0.4.15-dev-1761-gcaf89b9 https://github.com/reactos/reactos/commit/caf89b95829ca8cf851ed20103b70a645e8c5a83
 
Description
Using Lazarus from rapps (or the last 4.0) on ReactOS 0.4.15.
Instructions to reproduce: If you build an application (including the simple blank-form template), and click Run (or press F9), the application builds and runs normally, but closing it with the x button will not actually exit the process (you can see project1.exe in Task Manager), which prevents Lazarus from stopping it or exiting, and prevents the operating system from being shut down.
What should appear: A message that shows "Execution Stopped", like it does under Windows or in the older ReactOS isos to the guilty.
Module: Ntoskrnl. Memory management. It is the section.c file.
Attachments
Issue Links
- relates to
 - 
                    
CORE-7241 kmtest:ZwAllocateVirtualMemory: three failures less with GCC 4.7.2
-         
 - Open
 
 -         
 - 
                    
CORE-17987 ReactOS's host of a VirtualPC 2004 asserts when shutdown's VM, assert can be continued
-         
 - Open
 
 -         
 - 
                    
CORE-13393 We should not send UNLOAD_DLL_DEBUG_EVENT after sending EXIT_PROCESS_DEBUG_EVENT
-         
 - Resolved
 
 -         
 - 
                    
ROSTESTS-297 apitests/ntdll/NtAllocateVirtualMemory.c: "Reserve memory below 0x10000" check unexpectedly succeeds on ROS and WS03
-         
 - Resolved
 
 -