[NTOS:MM] Fix Lazarus hang when closing running project with "X" CORE-20172